--- a/依存関係逆転の原則/依存関係逆転の原則.csproj
+++ b/依存関係逆転の原則/依存関係逆転の原則.csproj
@@ -54,13 +54,13 @@
     </Compile>
     <Compile Include="Form1ViewModel.cs" />
     <Compile Include="Objects\Factories.cs" />
-    <Compile Include="Objects\Form2.cs">
+    <Compile Include="Form2.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Objects\Form2.Designer.cs">
+    <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Objects\Form2ViewModel.cs" />
+    <Compile Include="Form2ViewModel.cs" />
     <Compile Include="Objects\IProduct.cs" />
     <Compile Include="Objects\IStock.cs" />
     <Compile Include="Objects\ModuleA.cs" />
@@ -73,7 +73,7 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Objects\Form2.resx">
+    <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -101,6 +101,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
       <Version>6.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Unity">
+      <Version>5.11.10</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
